...
  return (
    <SafeAreaView style={styles.scrollview} edges={["left", "right", "bottom"]}>
      <ScrollView
        alwaysBounceHorizontal={false}
        showsHorizontalScrollIndicator={false}
        showsVerticalScrollIndicator={false}
        testID="screen-homescreen"
      >
        <View style={styles.cells}>
          <Column style={styles.column}>
            <HomeScreenButton
              title="Menus"
              iconName="bowl"
...
